overlays/istio-websockets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: websocket
  labels:
    istio-injection: enabled
