overlays/istio-websockets/websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: tornado
  labels:
    app: tornado
    service: tornado
spec:
  ports:
  - port: 2000
    name: http
  selector:
    app: tornado
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tornado
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tornado
      version: v1
  template:
    metadata:
      labels:
        app: tornado
        version: v1
    spec:
      containers:
      - name: nginx-proxy
        image: nginx:1.19.5
        command:
        - nginx-debug
        - -g
        - "daemon off;"
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
          readOnly: true
        ports:
        - name: http
          containerPort: 2000
      - name: tornado
        image: psibi/tornado-websocket:v0.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
      volumes:
        - name: nginx-config
          configMap:
            name: ws-nginx
